added trophies, game table  altered

--- a/site/psi19/quiz/static/quiz/style.css
+++ b/site/psi19/quiz/static/quiz/style.css
@@ -147,6 +147,10 @@ body {
   border:#2699FB;
 }
 
+#welcome_message a{
+  margin-left: 10px;
+}
+
 
 /*--------------------------------*\
     Cards
@@ -326,7 +330,7 @@ body {
 
 
 .homepage_tile {
-  border: black solid;
+  border: 1px black solid;
   margin: 10px;
   padding: 20px;
   background-color: #2699FB;
