--- a/site/psi19/quiz/templates/quiz/trophy_page.html
+++ b/site/psi19/quiz/templates/quiz/trophy_page.html
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row justify-content-center" id="trophy_h1">
-    <h1 class="text-center">Trophy</h1>
+    <h1 class="text-center">Trophy case</h1>
   </div>
 
   <div class="row">
