--- a/site/psi19/quiz/templates/quiz/base.html
+++ b/site/psi19/quiz/templates/quiz/base.html
@@ -28,6 +28,9 @@
 
 <body>
 
+        <div id="page_container">  
+            <div id="content_wrapper">
+
     <!-- Header and Menu -->
     <header class="header_area">
 
@@ -188,6 +191,7 @@
     {% endblock content %}
     <!-- /Page Content -->
 
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
@@ -206,6 +210,10 @@
     <script src="{% static 'quiz/bootstrap.min.js' %}"></script>
     <!-- /Scripts -->
 
+</div>
+
 </body>
+
+
 
 </html>
