Toggle menu fixed

--- a/site/psi19/quiz/static/quiz/style.css
+++ b/site/psi19/quiz/static/quiz/style.css
@@ -666,7 +666,7 @@ body {
 
   .main_menu .nav-item {
     padding: 5px 10px 5px 15px;
-    background-color: #ff8b23;
+    background-color: #2699FB;
   }
 
   .main_menu .navbar-nav .nav-link:hover {
@@ -697,7 +697,7 @@ body {
 
   .main_menu .nav-item {
     padding: 5px 10px 5px 15px;
-    background-color: #ff8b23;
+    background-color: #2699FB;
   }
 
   .main_menu .navbar-nav .nav-link:hover {
