--- a/site/psi19/quiz/templates/quiz/base.html
+++ b/site/psi19/quiz/templates/quiz/base.html
@@ -107,11 +107,12 @@
                                             Admin options
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="{% url 'quiz:submit_a_question' %}">Dodaj pitanje</a>
-                                            <a class="dropdown-item" href="{% url 'quiz:needs_validation' %}">Odobri pitanje</a>
-                                            <a class="dropdown-item" href="{% url 'quiz:moderator_candidates' %}">Dodeli moderatora</a>
-                                            <a class="dropdown-item" href="single-blog.html">Blokiraj korisnika</a>
-
+                                            <a class="dropdown-item" href="{% url 'quiz:submit_a_question' %}">Add question</a>
+                                            <a class="dropdown-item" href="{% url 'quiz:needs_validation' %}">Approve question</a>
+                                            <a class="dropdown-item" href="{% url 'quiz:admin_question_overview' %}">All questions</a>
+                                            <a class="dropdown-item" href="{% url 'quiz:moderator_candidates' %}">Grant moderator</a>
+                                            <a class="dropdown-item" href="single-blog.html">Block user</a>
+                                                
                                         </div>
                                     </li>
 
