Moderator options fixed

--- a/site/psi19/quiz/templates/quiz/base.html
+++ b/site/psi19/quiz/templates/quiz/base.html
@@ -126,8 +126,8 @@
                                             Moderator options
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="{% url 'quiz:submit_a_question' %}">Dodaj pitanje</a>
-                                            <a class="dropdown-item" href="elements.html">Odobri pitanje</a>
+                                            <a class="dropdown-item" href="{% url 'quiz:submit_a_question' %}">Add question</a>
+                                            <a class="dropdown-item" href="{% url 'quiz:needs_validation' %}">Approve question</a>
                                         </div>
                                     </li>
                                     {% endif %}
