Popravio rank_list, sad radi i lista prijatelja

--- a/site/psi19/quiz/templates/quiz/base.html
+++ b/site/psi19/quiz/templates/quiz/base.html
@@ -110,7 +110,7 @@
                                             <a class="dropdown-item" href="{% url 'quiz:submit_a_question' %}">Dodaj pitanje</a>
                                             <a class="dropdown-item" href="{% url 'quiz:needs_validation' %}">Odobri pitanje</a>
                                             <a class="dropdown-item" href="{% url 'quiz:moderator_candidates' %}">Dodeli moderatora</a>
-                                            <a class="dropdown-item" href="{% url 'quiz:block_user' %}">Blokiraj korisnika</a>
+                                            <a class="dropdown-item" href="#">Blokiraj korisnika</a>
 
                                         </div>
                                     </li>
