--- a/site/psi19/quiz/templates/quiz/base.html
+++ b/site/psi19/quiz/templates/quiz/base.html
@@ -90,7 +90,7 @@
                                     </li>
                                     {% if user.is_authenticated %}
                                     <li class="nav-item">
-                                        <a class="nav-link" href="{% url 'quiz:my_profile'%}">My Profile</a>
+                                        <a class="nav-link" href="{% url 'quiz:my_profile' value=user.id%}">My Profile</a>
                                     </li>
                                     {% endif %}
 
