Rank list za prijatelje je sada descending, preveo senior dropdown meni, povezao Become a moderator sa viewom

--- a/site/psi19/quiz/templates/quiz/base.html
+++ b/site/psi19/quiz/templates/quiz/base.html
@@ -142,8 +142,8 @@
                                             Senior options
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="{% url 'quiz:submit_a_question' %}">Dodaj pitanje</a>
-                                            <a class="dropdown-item" href="single-blog.html">Postani moderator</a>
+                                            <a class="dropdown-item" href="{% url 'quiz:submit_a_question' %}">Add question</a>
+                                            <a class="dropdown-item" href="{% url 'quiz:submit_wants_moderator' %}">Become a moderator</a>
                                         </div>
                                     </li>
 
