Front End For Report Form Done

--- a/site/psi19/quiz/templates/quiz/search_results.html
+++ b/site/psi19/quiz/templates/quiz/search_results.html
@@ -98,6 +98,8 @@
                     
                         {% endif %}
 
+
+                    <!-- Cant Report Blocked User -->
                     {% if record.user.is_active %}
 
                     <!-- Report Request -->
